Fixed POI MapView does not include the expand / collapse control #409

--- a/styles/_refine-controls-mobile.sass
+++ b/styles/_refine-controls-mobile.sass
@@ -17,7 +17,7 @@
         font-weight: 600
         height: 50px
         line-height: 50px
-        margin: 20px 30px 0
+        margin: 20px 30px
         text-align: center
 
     .refine-popup-mobile
